@@ -4,7 +4,7 @@
   --font-family: var(--sansserif-font-family);
   --bg-color: var(--white, hsl(var(--white-hue) var(--white-sat) var(--white-lum)));
   --color: var(--black, hsl(var(--black-hue) var(--black-sat) var(--black-lum)));
-  --border-width: 1px;
+  --border-width: var(--border-width1);
   --border-style: solid;
   --border-color: currentColor;
 
@@ -55,6 +55,10 @@
 
   --lsh: -0.025em;
   --lsd: -0.050em;
+
+  --border-width1: 1px;
+  --border-width2: 2px;
+  --border-width3: 3px;
 
   --border-radius1: 0.125rem;  /*  2 */
   --border-radius2: 0.25rem;   /*  4 */
