@@ -3,6 +3,7 @@
   * (type) add xs: classes
   * (copy) add nav, aside
   * (visibility) opacity steps by 5
+  * (border) add border-width
   * (variables) drop --default-* properties
 
 # 0.24.0 (2023-03-10)
